fix alignment of latest works wheel

--- a/src/features/layout/work/work.module.scss
+++ b/src/features/layout/work/work.module.scss
@@ -172,7 +172,7 @@
       position: absolute;
       z-index: 800;
       left: var(--content-padding);
-      top: -10px;
+      top: -50px;
       animation: rotate 15s linear infinite;
 
       @media screen and (width <=800px) {
